# rlst

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  build.rs  find_examples.py  out.txt  simd_output  tree.txt
algorithms/: Cargo.toml
algorithms/src/: adapter.rs  dense.rs  dense_matrix_traits.rs  iterative_solvers.rs  lapack.rs  lib.rs  linalg.rs  sparse.rs  traits.rs  types.rs
algorithms/src/adapter/: adapter_traits.rs  dense_matrix.rs  dense_vector.rs  rlst_dense_adapter.rs  vector.rs
algorithms/src/dense/: lu_decomp.rs  norm2.rs  pseudo_inverse.rs
algorithms/src/interface/: dense_matrix.rs
algorithms/src/iterative_solvers/: gram_schmidt_arnoldi.rs
algorithms/src/lapack/: cholesky_decomp.rs  evd.rs  inverse.rs  lu_decomp.rs  qr_decomp.rs  qr_pivot.rs  svd.rs  traits.rs  triangular_solve.rs  trisolve.rs
algorithms/src/sparse/: lu_umfpack.rs
algorithms/src/traits/: arnoldi.rs  basis.rs  cholesky_decomp.rs  evd.rs  gram_schmid.rs  inverse.rs  lu_decomp.rs  norm2.rs  pseudo_inverse.rs  qr_decomp.rs  qr_decomp_trait.rs  svd.rs  triangular_solve.rs  trisolve_trait.rs  types.rs
algorithms/src/types/: dense_matrix.rs  rlst_matrix.rs
blis/: Cargo.toml  build.rs
blis-src/: Cargo.toml  build.rs
blis/examples/: threads.rs
blis/src/: interface.rs  lib.rs  raw.rs  threading.rs  wrapper.h
blis/src/interface/: gemm.rs  threading.rs  types.rs
common/: Cargo.toml
common/src/: basic_traits.rs  lib.rs  tools.rs  traits.rs  types.rs
common/src/traits/: accessors.rs  constructors.rs  in_place_operations.rs  iterators.rs  operations.rs  properties.rs  random_access.rs
dense/: Cargo.toml  katex-header.html
dense-proc-macro/: Cargo.toml
dense-proc-macro/src/: lib.rs
dense/src/: addition.rs  array.rs  base_array.rs  base_matrix.rs  data_container.rs  examples.rs  gemm.rs  global.rs  layout.rs  layouts.rs  lib.rs  linalg.rs  macros.rs  matrix.rs  matrix_multiply.rs  matrix_ref.rs  matrix_view.rs  number_types.rs  op_containers.rs  scalar_mult.rs  subtraction.rs  tools.rs  traits.rs  types.rs
dense/src/array/: dot.rs  empty_axis.rs  iterators.rs  mult_into.rs  multiply.rs  operations.rs  operators.rs  random.rs  slice.rs  views.rs
dense/src/gemm/: blis.rs
dense/src/layouts/: arbitrary_stride_column_major.rs  arbitrary_stride_column_vector.rs  arbitrary_stride_row_major.rs  arbitrary_stride_row_vector.rs  column_major.rs  column_vector.rs  default_layout.rs  row_major.rs  row_vector.rs  upper_triangular.rs
dense/src/linalg/: inverse.rs  lu.rs  pseudo_inverse.rs  qr.rs  svd.rs
dense/src/matrix/: base_methods.rs  common_impl.rs  constructors.rs  iterators.rs  matrix_slices.rs  operations.rs  random.rs  vector_impl.rs
dense/src/op_containers/: addition.rs  cmp_wise_product.rs  complex_mat.rs  conjugate.rs  hadamard.rs  scalar_mult.rs  subtraction.rs  transpose.rs
dense/src/traits/: accessors.rs  layout.rs  matrix.rs  random_access.rs  size.rs
io/: Cargo.toml
io/src/: lib.rs  matrix_market.rs
io/tests/: test_array_70_30.mtx  test_mat_53_27.mtx  test_mm.rs
lapack/: Cargo.toml  cbbcsd.c  cbdsqr.c  cgbbrd.c  cgbcon.c  cgbequ.c  cgbequb.c  cgbrfs.c  cgbsv.c  cgbsvx.c  cgbtf2.c  cgbtrf.c  cgbtrs.c  cgebak.c  cgebal.c  cgebd2.c  cgebrd.c  cgecon.c  cgeequ.c  cgeequb.c  cgees.c  cgeesx.c  cgeev.c  cgeevx.c  cgehd2.c  cgehrd.c  cgelq.c  cgelq2.c  cgelqf.c  cgelqt.c  cgelqt3.c  cgels.c  cgelsd.c  cgelss.c  cgelsy.c  cgemlq.c  cgemlqt.c  cgemqr.c  cgemqrt.c  cgeql2.c  (+3507 more)
lapack/src/: geqp3.rs  getrf.rs  getrs.rs  lib.rs  ormqr.rs  unmqr.rs
netlib-lapack-src/: Cargo.toml  build.rs
netlib-lapack-src/src/: lib.rs
operator/: Cargo.toml
operator/examples/: playground.rs  polynomials.rs
operator/src/: implementation.rs  index_layout.rs  interface.rs  lib.rs  linalg.rs  operations.rs  operator.rs  space.rs
operator/src/implementation/: array_frame.rs  array_vector_space.rs  dense.rs  dense_matrix_operator.rs
operator/src/interface/: array_vector_space.rs  dense_matrix_operator.rs  sparse_operator.rs
operator/src/linalg/: indexable_matrix.rs  indexable_vector.rs
operator/src/operations/: conjugate_gradients.rs  gram_schmidt.rs  modified_gram_schmidt.rs
operator/src/space/: dual_space.rs  element.rs  frame.rs  indexable_element.rs  indexable_space.rs  inner_product_space.rs  linear_space.rs  normed_space.rs  spanning_set.rs
operator/src/spaces/: dual_space.rs  element.rs  indexable_element.rs  indexable_space.rs  inner_product_space.rs  linear_space.rs  normed_space.rs
proc-macro/: Cargo.toml  README.md
proc-macro/src/: dense.rs  lib.rs  tracing.rs
rlst/: Cargo.toml  LICENSE-APACHE
rlst/examples/: array.rs  array_operations.rs  array_tools.rs  dist_array_operations.rs  dist_csr_matrix.rs  distributed_array.rs  distributed_array_operations.rs  distributed_csr_matrix.rs  eigenvalue_decomposition.rs  fixed_size_array.rs  fixed_size_matrix.rs  ghost_communicator.rs  lu_decomposition.rs  mat_507_313.mm  parallel_sort.rs  sparse.rs  x_313.mm  y_507.mm
rlst/proc-macro/: Cargo.toml
rlst/proc-macro/src/: dense.rs  lib.rs
rlst/src/: base_types.rs  dense.rs  distributed_tools.rs  doc.rs  external.rs  lib.rs  prelude.rs  simd.rs  sparse.rs  threading.rs  tracing.rs  traits.rs
rlst/src/base_types/: number_traits_impl.rs  rlst_num_impl.rs
rlst/src/dense/: array.rs  base_array.rs  batched_gemm.rs  block_cyclic_array.rs  data_container.rs  fftw.rs  gemm.rs  layout.rs  macros.rs  matrix_multiply.rs  number_types.rs  strided_base_array.rs  tools.rs  traits.rs
rlst/tests/: array.rs  array_operations.rs  lapack.rs  linalg.rs  operator.rs  sparse.rs
sparse/: Cargo.toml
sparse/examples/: distributed_csr_matrix.rs  ghost_communicator.rs  mpi_matvec.rs  mpi_vector.rs  vector.rs
sparse/src/: distributed.rs  distributed_vector.rs  ghost_communicator.rs  index_layout.rs  index_set.rs  lib.rs  local.rs  operator_interface.rs  sparse.rs  tools.rs  traits.rs  vector.rs
src/: doc.rs  (+11 more)
suitesparse-src/: Cargo.toml  build.rs
umfpack/: Cargo.toml  build.rs
umfpack/examples/: umfpack_simple.rs
umfpack/src/: lib.rs  wrapper.h
(+413 files in other folders)
