[package]
name = "rlst"
version = "0.1.1-dev"
authors = ["The linalg-rs contributors"]
edition = "2021"
description = "A Rust native linear algebra library."
license = "MIT / Apache-2.0"
homepage = "https://github.com/linalg-rs"
repository = "https://github.com/linalg-rs/rlst"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]
exclude = [
    "suitesparse-src",
    "netlib-lapack-src",
    "blis-src",
]

[lib]
name = "rlst"

[dependencies]
rlst-proc-macro = { path = "proc-macro" }
num = { version = "0.4", features = ["serde", "rand"]}
approx = { version = "0.5", features=["num-complex"] }
num_cpus = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
itertools = "0.12"
blas = "0.22"
lapack = "0.19"
thiserror = "1"
serde = "1"

coe-rs = "0.1.2"
pulp = { version = "0.18.12" }
bytemuck = "1.16.0"
hexf = "0.2.1"

mpi = { version="0.8.0", optional=true }
mpi-sys = { version="0.2.1", optional=true }


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
paste = "1"
rand = "0.8"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
cmake = "0.1"

[features]
strict = []
default = ["sleef"]
mpi = ["dep:mpi", "dep:mpi-sys"]
suitesparse = []
internal_blis = []
disable_system_blas_lapack = []
metal = []
sleef = []

[lints.clippy]
wildcard_imports = "forbid"

[[bench]]
name = "matrix_multiplication"
harness = false

[[bench]]
name = "inverse_sqrt_f64"
harness = false

[[bench]]
name = "inverse_sqrt_f32"
harness = false

[[bench]]
name = "sin_cos"
harness = false

[[example]]
name = "mpi_gather_to_all_vector"
required-features = ["mpi"]

[[example]]
name = "mpi_gather_vector"
required-features = ["mpi"]

[[example]]
name = "mpi_index_set"
required-features = ["mpi"]

[[example]]
name = "mpi_scatter_vector"
required-features = ["mpi"]
