[package]
name = "rlst"
version = "0.2.1"
authors = ["The linalg-rs contributors"]
edition = "2021"
description = "A Rust native linear algebra library."
license = "MIT / Apache-2.0"
homepage = "https://github.com/linalg-rs"
repository = "https://github.com/linalg-rs/rlst"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]
exclude = ["suitesparse-src", "netlib-lapack-src", "blis-src"]

[lib]
name = "rlst"

[dependencies]
rlst-proc-macro = { path = "proc-macro", version = "0.2" }
num = { version = "0.4", features = ["serde", "rand"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
itertools = "0.13"
blas = "0.22"
lapack = "0.19"
thiserror = "2"
serde = "1"
bempp-distributed-tools = { path = "../distributed_tools", optional = true }
# bempp-distributed-tools = { git = "https://github.com/bempp/distributed_tools.git", optional = true }

coe-rs = "0.1.2"
pulp = { version = "0.20" }
bytemuck = "1.16.0"

mpi = { version = "0.8.0", optional = true }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = { version = "0.5", features = ["num-complex"] }
paste = "1"
rand = "0.8"

[build-dependencies]
cc = "1.0"
bindgen = "0.71"
cmake = "0.1"
git2 = "0.19"

[features]
strict = []
default = ["mpi"]
mpi = ["dep:mpi", "dep:bempp-distributed-tools"]
suitesparse = []
disable_system_blas_lapack = []
sleef = []
nightly = []
internal_blis = []

[lints.clippy]
wildcard_imports = "forbid"

[[bench]]
name = "matrix_multiplication"
harness = false

[[bench]]
name = "inverse_sqrt_f64"
harness = false

[[bench]]
name = "inverse_sqrt_f32"
harness = false

[[bench]]
name = "sin_cos"
harness = false

[[bench]]
name = "exp"
harness = false


[[example]]
name = "mpi_gather_to_all_vector"
required-features = ["mpi"]

[[example]]
name = "mpi_gather_vector"
required-features = ["mpi"]

[[example]]
name = "mpi_index_set"
required-features = ["mpi"]

[[example]]
name = "mpi_scatter_vector"
required-features = ["mpi"]

[[example]]
name = "distributed_csr_matmul"
required-features = ["mpi"]

[[example]]
name = "cg_distributed"
required-features = ["mpi"]
