[package]
name = "rlst-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-common = {path = "../common"}
rlst-dense = {path = "../dense"}
num = "0.4"

[dev-dependencies]
cauchy = "0.4"
float_eq = { version = "1", features = ["num"] }

[lib]
name = "rlst_algorithms"