[features]
strict = []

[package]
name = "rlst-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-common = {path = "../common"}
rlst-dense = {path = "../dense"}
rlst-blis-src = {path = "../blis-src"}
rlst-netlib-lapack-src = {path = "../netlib-lapack-src"}
rlst-sparse = { path = "../sparse"}
rlst-umfpack = { path = "../umfpack"}
num = "0.4"
rand = "0.8"
lapacke = { version = "0.5"}
lapack = "0.19.*"
# lapack-src = { version = "0.9", features = ["accelerate"]}
rand_chacha = "0.3"
approx = { version = "0.5", features=["num-complex"] }
paste = "1"

[dev-dependencies]
cauchy = "0.4"
float_eq = { version = "1", features = ["num"] }



[lib]
name = "rlst_algorithms"
