[features]
strict = []

[package]
name = "rlst-blis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-blis-src = { path = "../blis-src"}
rlst-common = { path = "../common"}
num_cpus = "1"
num = "0.4"

[lib]
name = "rlst_blis"

[build-dependencies]
bindgen = "0.65.*"


