[features]
strict = []

[package]
name = "rlst-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
cauchy = "0.4"
thiserror = "1.0.40"
rand = "0.8"
rand_distr = "0.4"
approx = { version = "0.5", features=["num-complex"] }


[lib]
name = "rlst_common"
