[package]
name = "rlst-dense"
version = "0.0.1"
authors = ["The linalg-rs contributors"]
edition = "2021"
description = "A Rust native dense linear algebra library."
license = "MIT + Apache 2.0"
homepage = "https://github.com/linalg-rs"
repository = "https://github.com/linalg-rs/rlst"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rlst_dense"

[dependencies]
num = {version = "0.4", features = ["serde", "rand"] }
rand = "0.8"
itertools = "0.12"
rand_distr = "0.4"
approx = { version = "0.5", features = ["num-complex"] }
rand_chacha = "0.3"
paste = "1"
lapack = "0.19.*"
thiserror = "1.0.58"
serde = "1.*"
blas = "0.22.*"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[features]
