[features]
strict = []

[package]
name = "rlst-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-sparse = {path = "../sparse"}
rlst-dense = {path = "../dense"}
rlst-blis = {path = "../blis"}
num = "0.4"
cauchy = "0.4"
thiserror = "1.0.40"

[dev-dependencies]
approx = { version = "0.5", features = ["num-complex"] }
rand = "0.8.*"


[lib]
name = "rlst_operator"
