[package]
name = "rlst"
version = "0.4.0-dev"
authors = ["The linalg-rs contributors"]
edition = "2024"
description = "A Rust native linear algebra library."
license = "MIT / Apache-2.0"
homepage = "https://github.com/linalg-rs"
repository = "https://github.com/linalg-rs/rlst"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rlst"

[dependencies]
rlst-proc-macro = { path = "proc-macro", version = "0.4.0-dev" }
num = { version = "0.4", features = ["serde", "rand"] }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
itertools = "0.14"
blas = "0.23"
lapack = "0.20"
thiserror = "2"
serde = "1"
log = { version = "0.4", optional = true }
typenum = { version = "1", features = ["const-generics"]}
paste = "1"
aligned-vec = "0.6"

coe-rs = "0.1.2"
pulp = { version = "0.22" }
bytemuck = "1.24.0"
num_cpus = "1"

mpi = { git = "https://github.com/rsmpi/rsmpi.git", optional = true , features = ["derive"]}
mpi-sys = { git = "https://github.com/rsmpi/rsmpi.git", optional = true }

fftw-sys = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
approx = { version = "0.5", features = ["num-complex"] }
rand = "0.9"
paste = "1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
blas-src = { version = "0.14", features = ["accelerate"]}
lapack-src = { version = "0.13", features = ["accelerate"]}

[target.'cfg(target_os = "linux")'.dev-dependencies]
lapack-src = { version = "0.13", features = ["netlib"]}
blas-src = { version = "0.14", features = ["blis"] }



[build-dependencies]
cc = "=1.2"
bindgen = { version = "0.72.1", default-features = false }
cmake = "0.1"
git2 = "0.20"

[features]
strict = []
default = ["mpi"]
mpi = ["dep:mpi", "dep:mpi-sys"]
nightly = []
blis_threading = []
openblas_threading = []
mkl_threading = []
enable_tracing = ["rlst-proc-macro/enable_tracing", "dep:log"]
fftw = ["dep:fftw-sys"]
fftw_system = ["fftw-sys/system"]
fftw_source = ["fftw-sys/source"]
fftw_mkl = ["fftw-sys/intel-mkl"]


[lints.clippy]
wildcard_imports = "forbid"

[[example]]
name = "distributed_array"
required-features = ["mpi"]

[package.metadata.example.distributed_array.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "distributed_array_operations"
required-features = ["mpi"]

[package.metadata.example.distributed_array_operations.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "distributed_csr_matrix"
required-features = ["mpi"]

[package.metadata.example.distributed_csr_matrix.templated-examples]
command = "mpirun -n {{NPROCESSES}}"
