[package]
name = "rlst-sparse"
version = "0.1.0"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-operator = {path = "../operator"}
rlst-common = {path = "../common"}
rlst-dense = {path = "../dense"}
mpi = { git="https://github.com/rsmpi/rsmpi", optional=true }
mpi-sys = { git="https://github.com/rsmpi/rsmpi", optional=true }
num = "0.4"
rand = "0.8"
rand_distr = "0.4"
approx = { version = "0.5", features=["num-complex"] }


[dev-dependencies]
cauchy = "0.4"
float_eq = { version = "1", features = ["num"] }
rlst-io = { path = "../io"}
rand_chacha = "0.3"

[lib]
name = "rlst_sparse"

[features]
default = ["mpi","mpi-sys"]
mpi = ["dep:mpi"]
strict = []
