[package]
name = "rlst-sparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-dense = {path = "../dense"}
mpi = { version="0.7.0", optional=true }
mpi-sys = { version="0.2.1", optional=true }
num = "0.4"
rand = "0.8"
rand_distr = "0.4"
approx = { version = "0.5", features=["num-complex"] }
itertools = "0.12"
rlst-umfpack = { path = "../umfpack", optional = true}



[dev-dependencies]
cauchy = "0.4"
float_eq = { version = "1", features = ["num"] }
rand_chacha = "0.3"

[lib]
name = "rlst_sparse"

[features]
default = []
mpi = ["dep:mpi", "mpi-sys"]
umfpack = ["dep:rlst-umfpack"]

strict = []
