[features]
strict = []

[package]
name = "rlst-umfpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlst-suitesparse-src = {path = "../suitesparse-src"}

[lib]
name = "rlst_umfpack"

[build-dependencies]
bindgen = "0.65.*"
