[features]
strict = []
enable_tracing = []

[package]
name = "rlst-proc-macro"
version = "0.2.1"
authors = ["The linalg-rs contributors"]
edition = "2021"
description = "Proc macros for a Rust native linear algebra library."
license = "MIT / Apache-2.0"
homepage = "https://github.com/linalg-rs"
repository = "https://github.com/linalg-rs/rlst"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1.0"
darling = "0.21"

[lints.clippy]
wildcard_imports = "forbid"
